# codexish

./: .env_example  Dockerfile  README.md  cli.py  docker-compose.yml  generate_repo_prompt.py  minimal_example.py  minimal_example2.py  pyproject.toml
prompts/: dev_agent_system.md  reviewer_agent_system.md
